--- a/modules/apps/liferay-learn/liferay-learn-taglib/src/main/resources/META-INF/resources/url/init-ext.jspf
+++ b/modules/apps/liferay-learn/liferay-learn-taglib/src/main/resources/META-INF/resources/url/init-ext.jspf
@@ -1,3 +1,20 @@
+<%--
+/**
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
+ *
+ * This library is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either version 2.1 of the License, or (at your option)
+ * any later version.
+ *
+ * This library is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+ * details.
+ */
+
+@generated
+--%>
 <%
 java.lang.String url = GetterUtil.getString((java.lang.String)request.getAttribute("liferay-liferay-learn:url:url"));
 java.lang.String message = GetterUtil.getString((java.lang.String)request.getAttribute("liferay-liferay-learn:url:message"));
